addition admin page content align fix

--- a/wisehands/admin/css/admin.css
+++ b/wisehands/admin/css/admin.css
@@ -2807,7 +2807,7 @@ button[_ngcontent-addition-help] {
 	    justify-content: center;
 	}
 
-	.qr-list-container p {
+	.addition-help-text p {
         text-align: center;
     }
 	
